--- a/DriverTracker/package.json
+++ b/DriverTracker/package.json
@@ -53,6 +53,7 @@
     "karma-jasmine": "^2.0.1",
     "merge-stream": "1.0.1",
     "popper.js": "^1.15.0",
+    "querystringify": "^2.1.1",
     "rimraf": "^2.6.3",
     "rxjs": "^6.3.3",
     "systemjs": "^0.19.47",
