--- a/DriverTracker/package.json
+++ b/DriverTracker/package.json
@@ -30,15 +30,15 @@
   },
   "homepage": "https://github.com/dmnisson/drivertracker#readme",
   "dependencies": {
-    "@angular/animations": "^7.2.6",
-    "@angular/common": "^7.2.6",
-    "@angular/compiler": "^9.0.4",
-    "@angular/core": "^7.2.6",
-    "@angular/forms": "^7.2.6",
-    "@angular/http": "^7.2.6",
-    "@angular/platform-browser": "^7.2.6",
-    "@angular/platform-browser-dynamic": "^7.2.6",
-    "@angular/router": "^7.2.6",
+    "@angular/animations": "^7.2.16",
+    "@angular/common": "^7.2.16",
+    "@angular/compiler": "^7.2.16",
+    "@angular/core": "^7.2.16",
+    "@angular/forms": "^7.2.16",
+    "@angular/http": "^7.2.16",
+    "@angular/platform-browser": "^7.2.16",
+    "@angular/platform-browser-dynamic": "^7.2.16",
+    "@angular/router": "^7.2.16",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@types/bootstrap": "^4.2.0",
     "ajv": "^6.9.2",
@@ -62,28 +62,28 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.900.4",
+    "@angular-devkit/build-angular": "^0.13.10",
     "@angular/cli": "^7.3.9",
-    "@angular/compiler-cli": "^9.0.4",
+    "@angular/compiler-cli": "^7.2.16",
     "@angular/language-service": "^7.0.4",
     "@types/jasmine": "^2.8.14",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "gulp": "^4.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
-    "gulp-cssmin": "0.2.0",
     "gulp-sass": "4.0.2",
     "gulp-typescript": "^5.0.0",
     "gulp-uglify": "3.0.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.1.0",
+    "karma": "^4.4.1",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "node-sass": "^4.13.1",
-    "protractor": "^5.4.2",
+    "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.2.4"
   }
 }
